<resources>
    <string name="app_name">Vocabulary Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_about">About Us</string>
    <string name="write_here_your_answer">Write here your answer</string>
    <string name="submit">Submit</string>
    <string name="play">Play</string>
    <string name="level">Level</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="expert">Expert</string>
    <string name="intermediate">intermediate</string>
    <string name="beginner">Beginner</string>
    <string name="football_players">Football Players</string>
    <string name="random_words">Random Words</string>
    <string name="attempts">Attempts</string>
    <string name="time">Time:</string>
    <string name="questions">Questions:</string>
    <string name="word">Word</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="global_scores">Global Scores</string>
    <string name="my_scores">My Scores</string>
    <string name="graph_pie">Graph Pie</string>
    <string name="reset">Reset</string>
    <string name="score">Score</string>
    <string name="username">Username:</string>
    <string name="male">Male</string>
    <string name="reset_settings">Reset settings</string>
    <string name="letter1">letter1</string>
    <string name="letter2">letter2</string>
    <string name="letter3">letter3</string>
    <string name="letter4">letter4</string>
    <string name="letter5">letter5</string>
    <string name="letter6">letter6</string>
    <string name="drop_here">Drop Here</string>
    <string name="skip">Skip</string>
    <string name="about_us">You can learn about us in Technological Educational Institute of Athens, this is how we do it.</string>
    <string name="about_us_name">ABOUT US</string>
    <string name="vquiz_name">V-Quiz</string>
</resources>
