<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/hero_xs"
    android:orientation="vertical"
    tools:context="com.teiath.harrys.vquiz.Activities.MenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_height_200"
        android:src="@drawable/ic_v_quiz"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/linear_margin_20"
        android:orientation="vertical">

        <Button
            android:id="@+id/playBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/play"
            android:textAlignment="center" />

        <Button
            android:id="@+id/levelBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/level"
            android:textAlignment="center" />

        <Button
            android:id="@+id/categoryBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/categories"
            android:textAlignment="center" />

        <Button
            android:id="@+id/statisticsBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/statistics"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
