<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teiath.harrys.vquiz.Activities.SettingsActivity"
    android:orientation="vertical"
    android:background="@color/white_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="@dimen/margin_15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sound"
            android:textSize="@dimen/text_main_size"/>

        <Switch
            android:id="@+id/sound_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:checked="true"/>

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="@dimen/margin_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/vibrate"
            android:textSize="@dimen/text_main_size" />

        <Switch
            android:id="@+id/vibration_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"/>

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"/>
    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/reset_settings"
        android:background="@drawable/in_game_button_style"/>
</LinearLayout>
